# multimodal-llm-learning-path

./: CONTRIBUTING.md  PROGRESS.md  README.md  START_HERE.md  learning-tracks.md  pyproject.toml  requirements.txt
beginner/: 01-what-is-multimodal-ai.md  02-core-mental-model.md  03-clip-before-llava.md  04-from-clip-to-vlm.md  05-training-without-the-math.md  06-how-to-read-vlm-papers.md  07-common-misconceptions.md  08-first-projects.md
capstone/: README.md
course/: syllabus.md  week-00-orientation.md  week-01-clip-and-embeddings.md  week-02-vlm-architecture.md  week-03-model-families.md  week-04-training-pipeline.md  week-05-evaluation.md  week-06-failures-and-safety.md  week-07-beyond-images.md  week-08-capstone.md
curriculum/: 00-prerequisites.md  01-foundations.md  02-architectures.md  03-training-pipeline.md  04-datasets.md  05-alignment.md  06-evaluation.md  07-audio-video-any-to-any.md
diagrams/: blip2-qformer.mmd  clip-contrastive-learning.mmd  evaluation-loop.mmd  llava-training-stages.mmd  multimodal-agent-loop.mmd  training-pipeline.mmd  vlm-basic-architecture.mmd
evaluation/: eval-template.jsonl  failure-taxonomy.md  leaderboards-are-not-enough.md  sample-predictions.jsonl
labs/: 00-first-multimodal-eval.md  01-clip-retrieval.md  02-build-a-tiny-vlm.md  03-finetune-small-vlm.md  04-vlm-evaluation-harness.md
notes/: architecture-taxonomy.md  multimodal-training.md  open-research-questions.md
projects/: project-ideas.md
quizzes/: 00-vocabulary.md  01-clip.md  02-vlm-architecture.md  03-training.md  04-evaluation.md  answers.md
(+14 files in other folders)
