[project]
name = "multimodal-llm-learning-path"
version = "0.1.0"
description = "Runnable teaching tools for a beginner-friendly multimodal LLM curriculum"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
clip = [
  "pillow>=10,<12",
  "torch>=2.2,<3",
  "transformers>=4.45,<5",
]
dev = [
  "ruff>=0.9,<1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
